<resources>
    <string name="app_name">Fananz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_sign_in_social">Sign in with social</string>
    <string name="str_or">OR</string>
    <string name="str_user_name_hint">Email</string>
    <string name="str_user_password_hint">Password</string>
    <string name="str_user_forgot_password_hint">Forgot password?</string>
    <string name="str_no_acc_hint">Register Now</string>
    <string name="str_sign_in_subscriber_register">Use your registered email address</string>
    <string name="str_belly_dance">Belly Dancer</string>
    <string name="str_first_artist">By Raqs Beledi</string>
    <string name="str_price">Price</string>
    <string name="str_aed">AED</string>
    <string name="str_first_price">3000-5000</string>
    <string name="show_details">DETAILS</string>
    <string name="str_request_now">BOOK NOW</string>
    <string name="str_photographer">Photographer</string>
    <string name="str_second_artist">By Ansel Adam</string>
    <string name="str_second_price">1000-2000</string>
    <string name="str_model">Model</string>
    <string name="str_third_artist">By Miranda Kerr</string>
    <string name="str_third_price">3000-5000</string>
    <string name="search_items">Search</string>
    <string name="str_filter">Filter</string>
    <string name="my_profile">My Profile</string>
    <string name="str_business_login">Business Login</string>
    <string name="str_portfolio">Portfolio</string>
    <string name="str_logout">Logout</string>
    <string name="str_taylor_swift">Taylor Swift</string>
    <string name="str_singer">Singer</string>
    <string name="str_facebook">www.facebook.artistpages.com</string>
    <string name="str_youtube">www.youtube.com/artist</string>
    <string name="str_details">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="str_request_services">Request Services</string>
    <string name="str_write_text_hint">Write your request details</string>
    <string name="str_submit">Submit</string>
    <string name="str_register">Register</string>
    <string name="str_register_now">Register Now</string>
    <string name="str_first_name_hint">First Name</string>
    <string name="str_last_name_hint">Last Name</string>
    <string name="str_user_email_hint">Email</string>
    <string name="str_user_phone_hint">Mobile No.</string>
    <string name="str_user_confirm_password_hint">Confirm Password</string>
    <string name="str_back">Back</string>
    <string name="str_user_agreement"><![CDATA[I agree to Terms & Conditions.]]></string>
    <string name="str_terms_and_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="str_close">Close</string>
    <string name="corporate">Corporate</string>
    <string name="freelance">Freelance</string>
    <string name="str_corporate_fee">Subscription Fees </string>
    <string name="str_fee">USD 160</string>
    <string name="str_subscription_acc">Subscription Account</string>
    <string name="str_business_name">Business Name</string>
    <string name="str_name_of_representative">Name of Representative</string>
    <string name="str_user_telephone_hint">Telephone No</string>
    <string name="str_user_web_hint">Website Url</string>
    <string name="str_country_of_residence">Country of Residence</string>
    <string name="str_freelance_fee">Subscription fees per annum</string>
    <string name="str_freelance_fee_aed">USD 80</string>
    <string name="str_name">Name</string>
    <string name="str_dont_hav_an_acc_hint">Not Registered yet?</string>
    <string name="str_add_new_porfolie">Add Portfolio</string>
    <string name="str_inactive">INACTIVATE </string>
    <string name="str_edit">MODIFY</string>
    <string name="str_belly_dance_desc">Belly dance is an expressive dance which emphasizes complex
        movements of the torso</string>
    <string name="str_photo_desc">Photographers are artists with the camera, using a blend of
        technical skills</string>
    <string name="str_portfolio_fb_link">Facebook Link</string>
    <string name="str_portfolio_you_link">Youtube Link</string>
    <string name="str_portfolio_min_price">Minimum Price</string>
    <string name="str_portfolio_max_price">Maximum Price</string>
    <string name="str_portfolio_details">Details</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_update">Update</string>
    <string name="str_price_in_aed">(All prices in AED only)</string>
    <string name="str_ok">Ok</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="str_select_picture">Select Picture</string>
    <string name="str_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="str_unexpected_error">Unexpected error</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="str_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="str_subscribe">Subscribe</string>
    <string name="please_wait">Please Wait</string>
    <string name="dlg_ok">Ok</string>
    <string name="str_modify">MODIFY</string>
    <string name="str_nick_name">Nick Name</string>
    <string name="facebook_app_id">369015673462835</string>
    <string name="str_name_empty_error">Please enter your name</string>
    <string name="str_email_empty">Please enter your email</string>
    <string name="str_pass_empty">Please enter password</string>
    <string name="str_mob_empty">Please enter mobile number</string>
    <string name="str_check_box_not">Please accept terms and conditions</string>
    <string name="str_next">Next</string>
    <string name="str_fb_empty">Please enter facebook link</string>
    <string name="str_you_empty">Please enter youtube link</string>
    <string name="str_min_price_error">Please enter minimum price</string>
    <string name="str_max_price_error">Please enter maximum price</string>
    <string name="str_max_price_greater_error">Maximum price should be greater than minimum price</string>
    <string name="str_portfolio_details_empty">Please enter details</string>
    <string name="str_server_err_title">Server Error</string>
    <string name="str_server_err_desc">Something went wrong on server try again</string>
    <string name="str_login_err_title">Login Error</string>
    <string name="str_show_details_err_title">Error</string>
    <string name="str_add_portfolio_err_title">Add Portfolio Error</string>
    <string name="str_get_category_err_title">Category Error</string>
    <string name="str_portfolio_list_err_title">No Portfolios</string>
    <string name="str_portfolio_err_title">Portfolio Error</string>
    <string name="str_fname_empty_error">Please enter first name</string>
    <string name="str_msg_empty">Please enter the message</string>
    <string name="str_request_send_success">Request send successfully</string>
    <string name="str_welcome_to_fananz">Welcome to Fananz</string>
    <string name="str_customer_login">Customer Login</string>
    <string name="str_login_emoty">Please login as user first</string>
    <string name="str_sub_register_success">Registers success</string>
    <string name="str_register_err_title">Register Error</string>
    <string name="str_sort">Sort By</string>
    <string name="str_clear">CLEAR</string>
    <string name="str_low">Low</string>
    <string name="str_high">High</string>
    <string name="btn_apply">Apply</string>
    <string name="str_low_to_high">Price: Low-to-High</string>
    <string name="str_high_to_low">Price: High-to-Low</string>
    <string name="str_upload">Upload</string>
    <string name="str_delete">DELETE</string>
    <string name="str_update_btn">UPDATE</string>
    <string name="str_upload_btn">UPLOAD</string>
    <string name="str_cover_image">Cover Image</string>
    <string name="str_tap_on_img">Tap on image to change it</string>
    <string name="str_want_to_update_photos">Do you want to update photos?</string>
    <string name="str_yes">YES</string>
    <string name="str_no">NO</string>
    <string name="str_update_photos">Photo update</string>
    <string name="str_paypal_client_id">AfzYXpuZS4hsZIRRiE1uWoXXKuHHahsFdiD4OlqdEY6RPyxRIRyow3u1CxI8HMlH0roGqq0V4ri9bNQy</string>
    <string name="str_subscribe_message">Subscribe for corporate</string>
    <string name="str_subscribe_later">Later</string>
    <string name="str_corporate_annual_fee">Do you want to subscribe annual membership worth USD 160</string>
    <string name="str_subscription_error">Subscription error</string>
    <string name="str_subscription_msg">Server is unable to generate subscription try again later</string>
    <string name="str_success_pay">Your subscription is successful, Login with email and password</string>
    <string name="str_photo_delete_success">Photo deleted successfully</string>
    <string name="str_fre_annual_fee">Do you want to subscribe annual membership worth USD 80</string>
    <string name="str_pass_confirm_incorrect">Password are not match</string>
    <string name="str_active">ACTIVATE</string>
    <string name="str_inactive_error_response">Error</string>
    <string name="str_first_name">Name</string>
    <string name="str_btn_save">Save</string>
    <string name="str_btn_send_email">Send Mail</string>
    <string name="str_forgot_msg">You will receive your credentials,if your email id matches with registered email id</string>
    <string name="str_forgot_pass_success">Please check your email for password</string>
    <string name="str_forgot_pass_title">Password Send</string>
    <string name="str_forgot_pass_error">Error To Send Mail</string>
    <string name="str_update_profile_err">Error to update profile</string>
    <string name="str_update_profile_success">Profile updated</string>
    <string name="str_profile_updated">Subscriber profile updated successfully</string>
    <string name="str_add_portfolio_title">Add Portfolio</string>
    <string name="str_forgot_pass_title1">Forgot Password</string>
    <string name="str_login">Login</string>
    <string name="str_request_send_fail">Request is not send try again</string>
    <string name="str_charges">Charges in</string>
    <string name="str_portfolio_you_tube">YOUTUBE</string>
    <string name="str_portfolio_facebook">FACEBOOK</string>
    <string name="str_about_us">ABOUT US</string>
    <string name="str_my_portfolio">My Portfolio</string>
    <string name="str_partner_us">Partner With Us</string>
    <string name="str_email_wrong">Please enter correct email id</string>
    <string name="str_mob_wrong">Please enter correct mobile number</string>
    <string name="str_ph_invalid">Please enter correct phone number</string>
    <string name="str_pay_subscription">Pay Subscription</string>
    <string name="str_url_not_valid">Given url is not valid.</string>
    <string name="str_change">CHANGE</string>
    <string name="str_slider_images">Slider Images</string>
    <string name="str_category">Category</string>
    <string name="str_sub_category">Sub Category</string>
    <string name="str_net_err">Network Error</string>
    <string name="str_err_net_msg">Please connect to the internet</string>
    <string name="str_cannot_delete_cover">You can not delete the cover image</string>
    <string name="str_done">Done</string>
</resources>