<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fananzapp.activities.ArtistDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="frameLayout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <com.fananzapp.views.LatoBoldTextView
                    android:id="@+id/txtArtistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/str_taylor_swift"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp" />

                <com.fananzapp.views.LatoTextView
                    android:id="@+id/txtArtistCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/str_singer"
                    android:textColor="@color/primaryText2"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_price"
                        android:textColor="@color/primaryText2"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/str_aed"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/str_first_price"
                            android:textColor="@color/primaryText"
                            android:textSize="22sp" />
                    </LinearLayout>

                </LinearLayout>

                <com.fananzapp.views.LatoTextView
                    android:id="@+id/txtFbLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/str_facebook"
                    android:textColor="@color/hyperlinkColour"
                    android:textSize="16sp" />

                <com.fananzapp.views.LatoTextView
                    android:id="@+id/txtYoutubeLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/str_youtube"
                    android:textColor="@color/hyperlinkColour"
                    android:textSize="16sp" />

                <com.fananzapp.views.LatoTextView
                    android:id="@+id/txtArtistDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/str_details"
                    android:textColor="@color/primaryText2"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/request_now_btn"
                    android:gravity="center"
                    android:padding="14dp"
                    android:text="@string/str_request_now"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
