<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@android:color/white"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLay"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/belly_dance"
                android:transitionName="frameLayout">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/coverImg1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/over_layer"
                    android:padding="14dp"
                    android:text="@string/str_belly_dance"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/txtSubCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="14dp"
                android:paddingStart="14dp"
                android:paddingTop="8dp"
                android:text="@string/str_first_artist"
                android:textColor="@color/primaryText2"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingEnd="14dp"
                android:paddingStart="14dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/str_charges"
                    android:textColor="@color/primaryText2"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:text="@string/str_aed"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtMinMaxPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/str_first_price"
                        android:textColor="@color/primaryText"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnInactive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_show_details"
                    android:padding="14dp"
                    android:text="@string/str_inactive"
                    android:textColor="@color/secondaryText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btnModify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/request_now_btn"
                    android:padding="14dp"
                    android:text="@string/str_modify"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>