<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:text="@string/str_request_services"
        android:textColor="@color/primaryText"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_colour"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/txtArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/str_request_services"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="16dp"
            android:paddingStart="5dp"
            android:text="@string/str_write_text_hint"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_write_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:inputType="text|textMultiLine"
            android:lines="4"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText2"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/divider_colour"
            android:text="@string/str_cancel" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/sign_in_btn"
            android:text="@string/str_submit" />
    </LinearLayout>

</LinearLayout>